--- a/project.config
+++ b/project.config
@@ -1,6 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
+	action = rebase if necessary
 [access "refs/*"]
 	owner = group user/yiliayang-ytt
 [access "refs/for/refs/*"]
@@ -19,3 +20,12 @@
 [access "refs/tags/*"]
 	push = group user/yiliayang-ytt
 	push = +force group user/yiliayang-ytt
+[plugin "zuul-results-summary"]
+	enabled = false
+[plugin "uploadvalidator"]
+	blockedContentTypeWhitelist = false
+	maxPathLength = 0
+	rejectDuplicatePathnamesLocale = en
+	rejectSubmodule = false
+	rejectSymlink = false
+	rejectWindowsLineEndings = false
