--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = rebase if necessary
+	action = inherit
 [access "refs/*"]
 	owner = group user/yiliayang-ytt
 [access "refs/for/refs/*"]
