--- a/project.config
+++ b/project.config
@@ -15,7 +15,7 @@
 [access "refs/heads/*"]
 	create = group user/yiliayang-ytt
 	push = +force group user/yiliayang-ytt
-	pushMerge = group user/yiliayang-ytt
+	pushMerge = deny group user/yiliayang-ytt
 	read = group user/yiliayang-ytt
 [access "refs/tags/*"]
 	push = group user/yiliayang-ytt
