Modify access rules

--- a/project.config
+++ b/project.config
@@ -16,7 +16,7 @@
 	create = group user/yiliayang-ytt
 	push = +force group user/yiliayang-ytt
 	pushMerge = deny group user/yiliayang-ytt
-	read = group user/yiliayang-ytt
+	read = deny group user/yiliayang-ytt
 [access "refs/tags/*"]
 	push = group user/yiliayang-ytt
 	push = +force group user/yiliayang-ytt
